--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -175,23 +175,23 @@
             <h1 class="">Mes Certifications</h1>
             <div class="row">
                 <div class="col-sm">
-                    <a href="files/Initiez-vous à Linux.pdf">
+                    <a href="Initiez-vous à Linux.pdf">
                         Initiez-vous a Linux
                     </a>
                 </div>
                 <div class="col-sm">
-                    <a href="files/découvrez l'univers de la cybersécurité-1.pdf">
+                    <a href="découvrez l'univers de la cybersécurité-1.pdf">
                         découvrez l'univers de la cybersécurité
 
                     </a>
                 </div>
                 <div class="col-sm">
-                    <a href="files/Concevez votre réseau TCP IP.pdf">
+                    <a href="Concevez votre réseau TCP IP.pdf">
                         Concevez votre réseau TCP IP
                     </a>
                 </div>
                 <div class="col-sm">
-                    <a href="files/Comprendre le Web.pdf">
+                    <a href="Comprendre le Web.pdf">
                         Comprende le Web
                     </a>
                 </div>
@@ -210,7 +210,7 @@
                             <h1>
                                 Active Directory
                             </h1>
-                            <a class="text-dark" href="files/Activedirectorye4.pdf">Voir Projet</a>
+                            <a class="text-dark" href="Activedirectorye4.pdf">Voir Projet</a>
 
 
                         </div>
@@ -218,14 +218,14 @@
                             <h1>
                                 OSPF
                             </h1>
-                            <a class="text-dark" href="files/ospf-rip.pdf">Voir Projet</a>
+                            <a class="text-dark" href="ospf-rip.pdf">Voir Projet</a>
 
                         </div>
                         <div class="col-sm">
                             <h1>
                                 Virual Local Area Network
                             </h1>
-                            <a class="text-dark" href="files/vlan.pdf" >Voir Projet</a>
+                            <a class="text-dark" href="vlan.pdf" >Voir Projet</a>
 
                         </div>
 
@@ -235,21 +235,21 @@
                             <h1>
                                 Apache
                             </h1>
-                            <a class="text-dark" href="files/apache.pdf">Voir Projet</a>
+                            <a class="text-dark" href="apache.pdf">Voir Projet</a>
 
                         </div>
                         <div class="col-sm">
                             <h1>
                                 Configuration NAT
                             </h1>
-                            <a class="text-dark" href="files/nat.pdf">Voir Projet</a>
+                            <a class="text-dark" href="nat.pdf">Voir Projet</a>
 
                         </div>
                         <div class="col-sm">
                             <h1>
                                 GLPI
                             </h1>
-                            <a class="text-dark" href="files/glpi-project .pdf">
+                            <a class="text-dark" href="glpi-project .pdf">
                                 Voir Projet
                             </a>
 
@@ -267,7 +267,7 @@
                             <h1 >
                                 GLPI
                             </h1>
-                            <a class="text-dark"  href="files/GlpiE4.pdf">
+                            <a class="text-dark"  href="GlpiE4.pdf">
                                 Voir Projet
                             </a>
 
@@ -276,7 +276,7 @@
                             <h1>
                                 Active Directory
                             </h1>
-                            <a class="text-dark" href="files/Activedirectory.pdf" >Voir Projet</a>
+                            <a class="text-dark" href="Activedirectory.pdf" >Voir Projet</a>
                         </div>
 
                     </div>
@@ -356,17 +356,17 @@
 
 
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js"
         integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc"
         crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/fontawesome.js"
         integrity="sha384-dPBGbj4Uoy1OOpM4+aRGfAOc0W37JkROT+3uynUgTHZCHZNMHfGXsmmvYTffZjYO"
         crossorigin="anonymous"></script>
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="owl.carousel.min.js"></script>
     <script src="https://assets2.lottiefiles.com/packages/lf20_v9riyrep.json"></script>
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script>
